vehicle/tests/golden/error/typing/unsolvedMeta/unsolvedMeta.vcl
test : Bool
test = forall x . True
